增加刪除商品圖片
